# fastGPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  chat.f90  create_model.py  driver.f90  encode_input.py  environment.yml  gpt2.f90  input  linalg_accelerate.c  linalg_c.f90  linalg_f.f90  linalg_mkl.f90  linalg_openblas.c  main.f90  omp.f90  omp_dummy.f90  pmatmul.f90  pt.py  tokenizer.f90
.github/workflows/: CI.yml
ci/: build.sh  build_lfortran.sh  lfortran_namelist.patch
cmake/: FindOMP.cmake  FindOPENBLAS.cmake  UserOverride.cmake
lp-fastgpt/: create_model.py  main.py  restore_model.py  timer.py
tests/: test_basic_input.f90  test_chat.f90  test_more_inputs.f90
